5/29/2006 Bob Rossi <bob@brasko.net>

	* annotate-two/src/commands.c (commands_issue_command): Remove unused 
	parameter.
	* tgdb-base/include/tgdb_client_command.h (enum
	tgdb_client_command_display_choice): Remove type.
	(tgdb_client_command_create): Remove display_choice parameter.
	* tgdb-base/src/tgdb_client_command.c (tgdb_client_command_create):
	Ditto.
	* tgdb-base/src/tgdb.c (tgdb_send): Remove extra parameter.

5/29/2006 Bob Rossi <bob@brasko.net>

	* tgdb-base/include/tgdb_command.h (enum tgdb_command): Remove
	is_buffered_console_command field.
	(tgdb_command_create): Remove is_buffered_console_command parameter.
	* tgdb-base/src/tgdb_command.c (tgdb_command_create): Ditto.
	* tgdb-base/src/tgdb.c (tgdb_process_client_commands): Remove unused
	parameter.
	(tgdb_send): Ditto.

5/29/2006 Bob Rossi <bob@brasko.net>

	* tgdb-base/include/tgdb_command.h (enum tgdb_command_choice): Comment
	field.
	(enum tgdb_command_action_choice): Remove type.
	(tgdb_command_create): Remove parameter action_choice.
	* tgdb-base/src/tgdb_command.c (tgdb_command_create): Remove parameter
	action_choice.
	* tgdb-base/src/tgdb.c (tgdb_process_client_commands): Modify for 
	parameter that was removed.
	(tgdb_send): Ditto.

5/29/2006 Bob Rossi <bob@brasko.net>

	* annotate-two/src/a2-tgdb.c (a2_is_client_ready): Remove
	TRUE/FALSE, and replace with 1/0.
	* annotate-two/src/commands.c (commands_initialize): Ditto.
	(parse_breakpoint): Ditto.
	(commands_set_state): Ditto.
	(commands_process): Ditto.
	(commands_prepare_for_command): Ditto.
	* annotate-two/src/globals.c (globals_initialize,
	global_set_start_info_sources, global_reset_info_sources_started,
	global_set_start_completion, global_reset_completion_started,
	global_set_start_list, global_list_finished): Ditto.
	* annotate-two/src/annotate.c (handle_misc_prompt,
	handle_misc_post_prompt, handle_prompt, handle_error_begin): Ditto.
	* gdbmi/src/gdbmi_tgdb.c (gdbmi_is_client_ready): Ditto.